tools/tests/ui/fail/l1047.cnf
// Test file for error code: L1047
// Expected error: Missing VIDEO-MP4 character in encoding -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
